--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@make-it-saas/pipeline": "0.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/inquirer": "^6.0.3",
     "@types/js-yaml": "^3.12.1",
